fix spacing issues on labeltext

--- a/src/design-system/DatePicker/DatePicker.css
+++ b/src/design-system/DatePicker/DatePicker.css
@@ -161,5 +161,5 @@
 }
 
 .date_picker-label {
-    margin-bottom: 0;
+    margin-bottom: -0.4rem;
 }
