--- a/src/design-system/Input/Input.css
+++ b/src/design-system/Input/Input.css
@@ -67,7 +67,7 @@ input::placeholder,
 .input-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: var(--space-4);
     position: relative;
 }
 
